--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Inbox
+      Movies
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -10,16 +10,19 @@
   <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  
+
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">
-        Inbox
+        Movies
       </ion-title>
     </ion-toolbar>
   </ion-header>
-  
+
+  <ion-searchbar (ionInput)='filterList($event)'></ion-searchbar>
+
   <ion-list>
-    <app-message *ngFor="let message of getMessages()" [message]="message"></app-message>
-  </ion-list>
+    <app-movie *ngFor="let movie of movieList" [movie]="movie"></app-movie>
+  </ion-list> 
+
 </ion-content>
