image alt changed

--- a/src/app/view-movie/view-movie.page.html
+++ b/src/app/view-movie/view-movie.page.html
@@ -12,7 +12,7 @@
       <ion-row>
         <ion-col size="auto">
           <div>
-            <img src="{{ movie.poster }}" alt="ion"/>
+            <img src="{{ movie.poster }}" alt="image-not-found"/>
           </div>
         </ion-col>
         <ion-col>
